bugfix: highlights scrollbar
No scrollbar on highlights page. By wrapping the onePageScroll into a
container.

--- a/client/highlights/highlights.styl
+++ b/client/highlights/highlights.styl
@@ -1,6 +1,9 @@
 @import 'nib'
 
 #highlights {
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
 
   .photo {
     position: absolute;
